--- a/src/util/base.scss
+++ b/src/util/base.scss
@@ -37,3 +37,12 @@ html { font-size: 62.5% }
 @media only screen and(min-width: 481px) { html { font-size: 94%!important } }
 @media only screen and(min-width: 561px) { html { font-size: 109%!important } }
 @media only screen and(min-width: 641px) { html { font-size: 125%!important }}
+
+.zui-flex {
+  display: flex;
+}
+.zui-flex-center {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
